# tenfoot

./: .gitignore  CLAUDE.md  RESEARCH.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  storage.rs
src-tauri/src/launcher_core/: error.rs  game.rs  library.rs  mod.rs  store.rs
src-tauri/src/stores/: mod.rs
src-tauri/src/stores/epic/: api.rs  manifest.rs  mod.rs  paths.rs
src-tauri/src/stores/gog/: database.rs  mod.rs  paths.rs
src-tauri/src/stores/steam/: api.rs  mod.rs  parser.rs  paths.rs
src/components/: BottomBar.tsx  ErrorMessage.tsx  GameCard.tsx  GameInfoPanel.tsx  GamesGrid.tsx  HeaderActionButton.tsx  LoadingScreen.tsx  PageHeader.tsx  SearchPanel.tsx  SidePanel.tsx  StoreCard.tsx  index.ts
src/components/icons/: SearchIcon.tsx  StoreIcons.tsx
src/hooks/: index.ts  useGames.ts  useGridNavigation.test.ts  useGridNavigation.ts  useStoreConnections.ts
src/screens/: EpicConnectScreen.tsx  GOGConnectScreen.tsx  LibraryScreen.tsx  SettingsScreen.tsx  SteamConnectScreen.tsx  StoresScreen.tsx  index.ts
src/styles/: global.css
src/types/: game.ts  index.ts
src/utils/: fuzzyMatch.test.ts  fuzzyMatch.ts
tests/: gameinfo.spec.ts  search.spec.ts  stores.spec.ts
