[package]
name = "tenfoot"
version = "0.1.0"
description = "A cross-platform game launcher for Steam, Epic, and GOG"
authors = ["you"]
edition = "2021"

[lib]
name = "tenfoot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for Steam/Epic API
reqwest = { version = "0.12", features = ["json", "blocking"] }

# URL encoding for OAuth
urlencoding = "2"

# Base64 encoding for OAuth Basic auth
base64 = "0.22"

# SQLite for GOG Galaxy database
rusqlite = { version = "0.32", features = ["bundled"] }

# File system and paths
dirs = "5"

# Error handling
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Platform-specific features
[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[target.'cfg(target_os = "linux")'.dependencies]
which = "7"

[dev-dependencies]
tempfile = "3"
